--- a/src/app/components/admin/categoria/categoria.component.html
+++ b/src/app/components/admin/categoria/categoria.component.html
@@ -1,127 +1,163 @@
 <!--{{dataSource.data | json}}-->
 
+<div class="table-button-row"></div>
+<div class="caja-range-btnAgrega-pdf">
+  <div class="table-button-row">
+    <button mat-flat-button class="button-rosado" (click)="onOpenModal()">
+      Agregar Categoría
+    </button>
+    <button mat-flat-button class="button-rosado" (click)="createPdf()">
+      Imprimir Reporte
+    </button>
+  </div>
 
-    <div class="table-button-row">
+  <div class="table-range">
+    <form [formGroup]="rangeForm">
+      <mat-form-field appearance="outline" class="search-form-field">
+        <mat-label>Buscar</mat-label>
+        <input
+          matInput
+          formControlName="buscar"
+          color="accent"
+          placeholder="Buscar"
+          autocomplete="off"
+          (keyup)="cargarEnTablaSiCampoVacio($event.target.value)"
+        />
+        <mat-error
+          *ngIf="rangeForm.controls.buscar.hasError('matBuscarInvalid')"
+          >LLene el campo</mat-error
+        >
+      </mat-form-field>
+      <mat-form-field appearance="outline" class="search-form-range">
+        <mat-label>Rango de fechas</mat-label>
+        <mat-date-range-input [rangePicker]="picker">
+          <input
+            matStartDate
+            formControlName="start"
+            placeholder="Fecha inicial"
+          />
+          <input matEndDate formControlName="end" placeholder="Fecha final" />
+        </mat-date-range-input>
+        <mat-hint>MM/DD/YYYY – MM/DD/YYYY</mat-hint>
+        <mat-datepicker-toggle matSuffix [for]="picker"></mat-datepicker-toggle>
+        <mat-date-range-picker #picker></mat-date-range-picker>
 
-    </div>
-    <div class="caja-range-btnAgrega-pdf">
+        <mat-error
+          *ngIf="rangeForm.controls.start.hasError('matStartDateInvalid')"
+          >Primera fecha inválido</mat-error
+        >
+        <mat-error *ngIf="rangeForm.controls.end.hasError('matEndDateInvalid')"
+          >Segunda fecha inválido</mat-error
+        >
+      </mat-form-field>
+
+      <button
+        class="button-form-consultar"
+        mat-raised-button
+        color="accent"
+        (click)="applyDateFilter()"
+        [disabled]="
+          rangeForm.get('buscar').invalid &&
+          (rangeForm.get('start').invalid || rangeForm.get('end').invalid)
+        "
+      >
+        Consultar
+      </button>
+      <button
+        class="button-form-limpiar"
+        mat-raised-button
+        color="accent"
+        (click)="clearFilter()"
+        [disabled]="
+          (rangeForm.get('start').invalid || rangeForm.get('end').invalid) &&
+          rangeForm.get('buscar').invalid
+        "
+      >
+        Limpiar
+      </button>
+    </form>
+  </div>
+</div>
+
+<table mat-table [dataSource]="dataSource" matSort>
+  <!-- Position Column -->
+  <ng-container matColumnDef="idcategoria">
+    <th mat-header-cell *matHeaderCellDef mat-sort-header>ID</th>
+    <td mat-cell *matCellDef="let element">{{ element.idcategoria }}</td>
+  </ng-container>
+
+  <!-- Name Column -->
+  <ng-container matColumnDef="nombre">
+    <th mat-header-cell *matHeaderCellDef mat-sort-header>NOMBRE</th>
+    <td mat-cell *matCellDef="let element">{{ element.nombre }}</td>
+  </ng-container>
+
+  <!-- Weight Column -->
+  <ng-container matColumnDef="createdAt">
+    <th mat-header-cell *matHeaderCellDef mat-sort-header>FECHA</th>
+    <td mat-cell *matCellDef="let element" class="center">
+      {{ element.createdAt | date : "dd-MM-YYYY" }}
+    </td>
+  </ng-container>
+
+  <!-- Name Column -->
+  <ng-container matColumnDef="idimgcategoria">
+    <th mat-header-cell *matHeaderCellDef mat-sort-header>ID IMAGEN</th>
+    <td mat-cell *matCellDef="let element">
+      {{ element.imgcategorias[0].idimgcategoria }}
+    </td>
+  </ng-container>
+
+  <!-- Name Column -->
+  <ng-container matColumnDef="nombreimgcategoria">
+    <th mat-header-cell *matHeaderCellDef mat-sort-header>NOMBRE IMAGEN</th>
+    <td mat-cell *matCellDef="let element">
+      {{ element.imgcategorias[0].nombreimgcategoria }}
+    </td>
+  </ng-container>
+
+  <!-- Name Column -->
+  <ng-container matColumnDef="linkimgcategoria">
+    <th mat-header-cell *matHeaderCellDef mat-sort-header>IMAGEN</th>
+    <td mat-cell *matCellDef="let element">
+      <img
+        [src]="URL + element.imgcategorias[0].nombreimgcategoria"
+        style="width: 50px; height: 50px"
+      />
+    </td>
+  </ng-container>
+
+  <!-- Name Column -->
+  <ng-container matColumnDef="actions">
+    <th mat-header-cell *matHeaderCellDef mat-sort-header class="actionCampo">
+      ACCIONES
+    </th>
+    <td mat-cell *matCellDef="let element">
       <div class="table-button-row">
-        <button mat-flat-button class="button-rosado" (click)="onOpenModal()">Agregar Categoría</button>
-        <button mat-flat-button class="button-rosado" (click)="createPdf()">Imprimir Reporte</button>
-        <!--<mat-form-field appearance="outline" class="search-form-field" floatLabel="never">
-          <input matInput   placeholder="Buscar" autocomplete="off" (keyup)="applyFilter($event.target.value)"/>
-
-        </mat-form-field>-->
-
+        <button
+          mat-icon-button
+          class="button-yellow"
+          (click)="onOpenModal(element)"
+        >
+          <mat-icon>edit</mat-icon>
+        </button>
+        <button
+          mat-icon-button
+          color="warn"
+          (click)="onDelete(element.idcategoria)"
+        >
+          <mat-icon>delete</mat-icon>
+        </button>
       </div>
+    </td>
+  </ng-container>
 
-      <div class="table-range">
-        <form [formGroup]="rangeForm">
-          <mat-form-field appearance="outline" class="search-form-field" >
-            <mat-label>Buscar</mat-label>
-            <input matInput formControlName="buscar" color="accent" placeholder="Buscar" autocomplete="off" (keyup)="cargarEnTablaSiCampoVacio($event.target.value)" />
-            <mat-error *ngIf="rangeForm.controls.buscar.hasError('matBuscarInvalid')">LLene el campo</mat-error>
-          </mat-form-field>
-          <mat-form-field appearance="outline" class="search-form-range">
-            <mat-label>Rango de fechas</mat-label>
-            <mat-date-range-input  [rangePicker]="picker">
-              <input matStartDate formControlName="start" placeholder="Fecha inicial">
-              <input matEndDate formControlName="end" placeholder="Fecha final">
-            </mat-date-range-input>
-            <mat-hint>MM/DD/YYYY – MM/DD/YYYY</mat-hint>
-            <mat-datepicker-toggle matSuffix [for]="picker"></mat-datepicker-toggle>
-            <mat-date-range-picker #picker></mat-date-range-picker>
-
-            <mat-error *ngIf="rangeForm.controls.start.hasError('matStartDateInvalid')">Primera fecha inválido</mat-error>
-            <mat-error *ngIf="rangeForm.controls.end.hasError('matEndDateInvalid')">Segunda fecha inválido</mat-error>
-          </mat-form-field>
-
-          <button
-              class="button-form-consultar"
-              mat-raised-button color="accent"
-              (click)="applyDateFilter()"
-              [disabled]="(rangeForm.get('buscar').invalid && (rangeForm.get('start').invalid || rangeForm.get('end').invalid))"  >Consultar</button>
-          <button
-              class="button-form-limpiar"
-              mat-raised-button color="accent"
-              (click)="clearFilter()"
-              [disabled]=" (rangeForm.get('start').invalid || rangeForm.get('end').invalid) && (rangeForm.get('buscar').invalid) ">Limpiar</button>
-        </form>
-
-
-      </div>
-    </div>
-
-    <table mat-table [dataSource]="dataSource" matSort >
-
-      <!-- Position Column -->
-      <ng-container matColumnDef="idcategoria">
-        <th mat-header-cell *matHeaderCellDef mat-sort-header> ID </th>
-        <td mat-cell *matCellDef="let element"> {{element.idcategoria}} </td>
-      </ng-container>
-
-      <!-- Name Column -->
-      <ng-container matColumnDef="nombre">
-        <th mat-header-cell *matHeaderCellDef mat-sort-header> NOMBRE </th>
-        <td mat-cell *matCellDef="let element"> {{element.nombre}} </td>
-      </ng-container>
-
-      <!-- Weight Column -->
-      <ng-container matColumnDef="createdAt">
-        <th mat-header-cell *matHeaderCellDef mat-sort-header> FECHA </th>
-        <td mat-cell *matCellDef="let element" class="center"> {{element.createdAt | date: 'dd-MM-YYYY'}} </td>
-      </ng-container>
-
-
-
-
-      <!-- Name Column -->
-      <ng-container  matColumnDef="idimgcategoria">
-        <th mat-header-cell *matHeaderCellDef mat-sort-header> ID IMAGEN </th>
-        <td  mat-cell *matCellDef="let element"> {{element.imgcategorias[0].idimgcategoria}} </td>
-      </ng-container>
-
-
-      <!-- Name Column -->
-      <ng-container  matColumnDef="nombreimgcategoria">
-        <th mat-header-cell *matHeaderCellDef mat-sort-header> NOMBRE IMAGEN </th>
-        <td  mat-cell *matCellDef="let element"> {{element.imgcategorias[0].nombreimgcategoria}} </td>
-      </ng-container>
-
-
-      <!-- Name Column -->
-      <ng-container  matColumnDef="linkimgcategoria">
-        <th mat-header-cell *matHeaderCellDef mat-sort-header> IMAGEN </th>
-        <td  mat-cell *matCellDef="let element">
-
-          <img [src]="URL+element.imgcategorias[0].nombreimgcategoria" style="width: 50px; height: 50px;"/>
-        </td>
-      </ng-container>
-
-
-      <!-- Name Column -->
-      <ng-container  matColumnDef="actions">
-        <th mat-header-cell *matHeaderCellDef mat-sort-header class="actionCampo"> ACCIONES  </th>
-        <td  mat-cell *matCellDef="let element">
-          <div class="table-button-row">
-            <!--<button mat-raised-button  class="button-yellow" (click)="onOpenModal(element)">Editar</button>
-            <button mat-flat-button color="warn" (click)="onDelete(element.idusuario)">Eliminar</button>-->
-            <button mat-icon-button  class="button-yellow" (click)="onOpenModal(element)"><mat-icon>edit</mat-icon></button>
-            <button mat-icon-button  color="warn" (click)="onDelete(element.idcategoria)"><mat-icon>delete</mat-icon></button>
-
-
-          </div>
-
-        </td>
-
-
-
-
-
-      </ng-container>
-
-      <tr mat-header-row *matHeaderRowDef="displayedColumns"></tr>
-      <tr mat-row *matRowDef="let row; columns: displayedColumns;"></tr>
-
-    </table>
-    <mat-paginator class="paginator" [pageSizeOptions]="[5,10,25,100]" [pageSize]="5" showFirstLastButtons></mat-paginator>
+  <tr mat-header-row *matHeaderRowDef="displayedColumns"></tr>
+  <tr mat-row *matRowDef="let row; columns: displayedColumns"></tr>
+</table>
+<mat-paginator
+  class="paginator"
+  [pageSizeOptions]="[5, 10, 25, 100]"
+  [pageSize]="5"
+  showFirstLastButtons
+></mat-paginator>
