--- a/src/app/components/admin/compras/compras.component.css
+++ b/src/app/components/admin/compras/compras.component.css
@@ -1,196 +1,153 @@
-table{
-    width: 95%;
-    margin: 0 auto;
-    margin-top: 1rem;
+table {
+  width: 95%;
+  margin: 0 auto;
+  margin-top: 1rem;
 
-    table-layout: fixed;
+  table-layout: fixed;
+}
+th,
+td {
+  overflow: hidden;
+  width: 50px;
+  text-overflow: ellipsis;
+  white-space: nowrap;
+}
+.mat-column-idcompra {
+  flex: none;
+  width: 3%;
+}
 
+.mat-column-precio_compra_uni {
+  flex: none;
+  width: 5%;
+}
 
+.mat-column-precio_compra_total {
+  flex: none;
+  width: 7%;
+}
 
- }
- th,td{
-     overflow: hidden;
-     width: 50px;
-     text-overflow: ellipsis;
-     white-space: nowrap;
- }
- .mat-column-idcompra {
-     flex: none;
-     width: 3%;
- }
+.mat-column-tipo_comprobante {
+  flex: none;
+  width: 10%;
+}
+.mat-column-num_comprobante {
+  flex: none;
+  width: 10%;
+}
+.mat-column-cantidad_ingreso {
+  flex: none;
+  width: 6%;
+}
+.mat-column-observacion {
+  flex: none;
+  width: 20%;
+}
 
- .mat-column-precio_compra_uni {
-     flex: none;
-     width: 5%;
- }
+.mat-column-fecha {
+  flex: none;
+  width: 8%;
+}
 
- .mat-column-precio_compra_total {
-     flex: none;
-     width: 7%;
- }
+.mat-column-hora {
+  flex: none;
+  width: 5%;
+}
 
+.search-div {
+  margin: 10px;
+}
 
-.mat-column-tipo_comprobante{
-     flex: none;
-     width: 10%;
- }
- .mat-column-num_comprobante{
-     flex: none;
-     width: 10%;
- }
- .mat-column-cantidad_ingreso{
-     flex: none;
-     width: 6%;
- }
- .mat-column-observacion{
-     flex: none;
-     width: 20%;
- }
+.paginator {
+  width: 95%;
+}
 
+th.mat-sort-header-sorted {
+  color: black;
+}
 
+th.mat-header-cell {
+  background-color: #79dae8;
+  /*background-color: rgb(54, 190, 88);*/
+  color: #2155cd;
 
- .mat-column-fecha{
-     flex: none;
-     width: 8%;
- }
+  font-weight: bold;
+  font-family: Arial;
 
- .mat-column-hora{
-     flex: none;
-     width: 5%;
- }
+  text-align: left;
+  max-width: 300px;
+}
 
+.button-yellow {
+  border: none;
+  border-radius: 40px 10px;
+  font-style: italic;
+  font-size: 18;
+  font-family: Verdana;
+  font-weight: bold;
 
- .search-div{
-     margin: 10px;
- }
- /*.search-form-field{
-     width: 30%;
-     margin-left: 2%;
+  background-color: #79dae8;
+  /*background-color: rgb(54, 190, 88);*/
+  color: #2155cd;
+}
+.color-estado {
+  border-radius: 40px 40px 40px 40px;
+  font-style: italic;
+  font-size: 18;
+  font-family: Verdana;
+  font-weight: bold;
+  color: rgb(32, 31, 31);
+  background-color: rgba(220, 20, 120, 0.781);
+}
+.color-estado:hover {
+  border-style: outset;
+  color: rgb(212, 226, 80);
+}
+.button-yellow:hover {
+  border-style: outset;
+  color: rgb(212, 226, 80);
+}
+.button-rosado {
+  color: floralwhite;
+  background-color: #2155cd;
+  width: 30%;
+  left: 35px;
+}
 
+.table-button-row button {
+  margin: 12px;
+}
 
+.caja-range-btnAgrega-pdf {
+  display: grid;
+  grid-template-columns: 400px 1fr;
+  height: 100px;
 
- }*/
- .paginator{
-     width: 95%;
- }
+  margin-top: 30px;
+  margin-bottom: 5px;
+}
+.caja-range-btnAgrega-pdf .table-button-row {
+  display: flex;
+  align-items: center;
+}
+.caja-range-btnAgrega-pdf .table-button-row button {
+  padding: 3px 10px;
+  font-size: 14px;
+}
+.caja-range-btnAgrega-pdf .table-range {
+  display: flex;
+  align-items: flex-end;
+}
 
- th.mat-sort-header-sorted{
-     color: black;
- }
-
- th.mat-header-cell{
-     background-color: #79DAE8;
-     /*background-color: rgb(54, 190, 88);*/
-     color: #2155CD;
-
-     font-weight: bold;
-     font-family: Arial;
-
-     text-align: left;
-     max-width: 300px;
-
- }
-
- .button-yellow{
-
-     border: none;
-     border-radius: 40px 10px ;
-     font-style: italic;
-     font-size: 18;
-     font-family: Verdana;
-     font-weight: bold;
-
-
-     background-color: #79DAE8;
-     /*background-color: rgb(54, 190, 88);*/
-     color: #2155CD;
- }
- .color-estado{
-
-     border-radius: 40px 40px 40px 40px ;
-     font-style: italic;
-     font-size: 18;
-     font-family: Verdana;
-     font-weight: bold;
-     color: rgb(32, 31, 31);
-     background-color: rgba(220, 20, 120, 0.781);
- }
- .color-estado:hover {
-
-     border-style: outset;
-     color: rgb(212, 226, 80);
- }
- .button-yellow:hover{
-     border-style: outset;
-     color: rgb(212, 226, 80);
- }
- .button-rosado{
-     color: floralwhite;
-     background-color: #2155CD;
-     width:30%;
-     left:  35px;
-
- }
-
-
- .table-button-row button{
-     margin: 12px;
-
- }
-
-
-
- .caja-range-btnAgrega-pdf{
-    display: grid;
-    grid-template-columns: 400px 1fr;
-    height: 100px;
-
-    margin-top: 30px;
-    margin-bottom: 5px;
-  }
-  .caja-range-btnAgrega-pdf .table-button-row {
-
-    display: flex;
-    align-items: center;
-
-
-  }
-  .caja-range-btnAgrega-pdf .table-button-row button{
-
-    padding: 3px 10px;
-    font-size: 14px;
-
-  }
-  .caja-range-btnAgrega-pdf .table-range {
-
-    display: flex;
-    align-items: flex-end;
-
-
-
-
-
-
-  }
-
-
-  .caja-range-btnAgrega-pdf .table-range .search-form-range{
-   font-size: 12px;
-
-
-
-  }
-  .caja-range-btnAgrega-pdf .table-range .search-form-field{
-
-    font-size:  12px;
-    width: 300px;
-
-
-
-  }
-  .caja-range-btnAgrega-pdf .table-range .search-form-range, button{
-
-    margin-left: 5px;
-    padding: 3px 15px;
-  }
-
+.caja-range-btnAgrega-pdf .table-range .search-form-range {
+  font-size: 12px;
+}
+.caja-range-btnAgrega-pdf .table-range .search-form-field {
+  font-size: 12px;
+  width: 300px;
+}
+.caja-range-btnAgrega-pdf .table-range .search-form-range,
+button {
+  margin-left: 5px;
+  padding: 3px 15px;
+}
