--- a/src/app/components/admin/compras/compras.component.html
+++ b/src/app/components/admin/compras/compras.component.html
@@ -1,168 +1,171 @@
+<div class="caja-range-btnAgrega-pdf">
+  <div class="table-button-row">
+    <button mat-flat-button class="button-rosado" (click)="createPdf()">
+      Imprimir Reporte
+    </button>
+  </div>
 
-      <div class="caja-range-btnAgrega-pdf">
+  <div class="table-range">
+    <form [formGroup]="rangeForm">
+      <mat-form-field appearance="outline" class="search-form-field">
+        <mat-label>Buscar por proveedor</mat-label>
+        <input
+          matInput
+          formControlName="buscar"
+          color="accent"
+          placeholder="Buscar por proveedor"
+          autocomplete="off"
+          (keyup)="cargarEnTablaSiCampoVacio($event.target.value)"
+        />
+        <mat-error
+          *ngIf="rangeForm.controls.buscar.hasError('matBuscarInvalid')"
+          >LLene el campo</mat-error
+        >
+      </mat-form-field>
+      <mat-form-field appearance="outline" class="search-form-range">
+        <mat-label>fecha compra </mat-label>
+        <mat-date-range-input [rangePicker]="picker">
+          <input
+            matStartDate
+            formControlName="start"
+            placeholder="Fecha inicial"
+          />
+          <input matEndDate formControlName="end" placeholder="Fecha final" />
+        </mat-date-range-input>
+        <mat-hint>MM/DD/YYYY – MM/DD/YYYY</mat-hint>
+        <mat-datepicker-toggle matSuffix [for]="picker"></mat-datepicker-toggle>
+        <mat-date-range-picker #picker></mat-date-range-picker>
+
+        <mat-error
+          *ngIf="rangeForm.controls.start.hasError('matStartDateInvalid')"
+          >Primera fecha inválido</mat-error
+        >
+        <mat-error *ngIf="rangeForm.controls.end.hasError('matEndDateInvalid')"
+          >Segunda fecha inválido</mat-error
+        >
+      </mat-form-field>
+
+      <button
+        class="button-form-consultar"
+        mat-raised-button
+        color="accent"
+        (click)="applyDateFilter()"
+        [disabled]="
+          rangeForm.get('buscar').invalid &&
+          (rangeForm.get('start').invalid || rangeForm.get('end').invalid)
+        "
+      >
+        Consultar
+      </button>
+      <button
+        class="button-form-limpiar"
+        mat-raised-button
+        color="accent"
+        (click)="clearFilter()"
+        [disabled]="
+          (rangeForm.get('start').invalid || rangeForm.get('end').invalid) &&
+          rangeForm.get('buscar').invalid
+        "
+      >
+        Limpiar
+      </button>
+    </form>
+  </div>
+</div>
+
+<table mat-table [dataSource]="dataSource" matSort>
+  <!-- Position Column-->
+  <ng-container matColumnDef="nombreproveedor">
+    <th mat-header-cell *matHeaderCellDef mat-sort-header>
+      NOMBRE<br />
+      PROVEEDOR
+    </th>
+    <td mat-cell *matCellDef="let element">{{ element.proveedor.nombre }}</td>
+  </ng-container>
+
+  <!-- Position Column-->
+  <ng-container matColumnDef="nombreproducto">
+    <th mat-header-cell *matHeaderCellDef mat-sort-header>
+      NOMBRE<br />
+      PRODUCTO
+    </th>
+    <td mat-cell *matCellDef="let element">{{ element.producto.nombre }}</td>
+  </ng-container>
+
+  <!-- Name Column -->
+  <ng-container matColumnDef="precio_compra_uni">
+    <th mat-header-cell *matHeaderCellDef mat-sort-header>
+      PRECIO<br />
+      UNIDAD
+    </th>
+    <td mat-cell *matCellDef="let element">{{ element.precio_compra_uni }}</td>
+  </ng-container>
+
+  <!-- Weight Column -->
+  <ng-container matColumnDef="precio_compra_total">
+    <th mat-header-cell *matHeaderCellDef mat-sort-header>
+      PRECIO<br />
+      TOTAL
+    </th>
+    <td mat-cell *matCellDef="let element" class="center">
+      {{ element.precio_compra_total }}
+    </td>
+  </ng-container>
+
+  <!-- Name Column -->
+  <ng-container matColumnDef="cantidad_ingreso">
+    <th mat-header-cell *matHeaderCellDef mat-sort-header>
+      CANTIDAD<br />
+      INGRESO
+    </th>
+    <td mat-cell *matCellDef="let element">{{ element.cantidad_ingreso }}</td>
+  </ng-container>
+
+  <!-- Name Column -->
+  <ng-container matColumnDef="observacion">
+    <th mat-header-cell *matHeaderCellDef mat-sort-header>OBSERVACIÓN</th>
+    <td mat-cell *matCellDef="let element">{{ element.observacion }}</td>
+  </ng-container>
+
+  <!-- Name Column -->
+  <ng-container matColumnDef="fecha">
+    <th mat-header-cell *matHeaderCellDef mat-sort-header>FECHA</th>
+    <td mat-cell *matCellDef="let element">
+      {{ element.fecha | date : "dd-MM-YYYY" }}
+    </td>
+  </ng-container>
+
+  <!-- Name Column -->
+  <ng-container matColumnDef="hora">
+    <th mat-header-cell *matHeaderCellDef mat-sort-header>HORA</th>
+    <td mat-cell *matCellDef="let element">{{ element.hora }}</td>
+  </ng-container>
+
+  <!-- Name Column -->
+  <ng-container matColumnDef="actions">
+    <th mat-header-cell *matHeaderCellDef mat-sort-header class="actionCampo">
+      ACCIONES
+    </th>
+    <td mat-cell *matCellDef="let element">
       <div class="table-button-row">
-        <!--<button mat-flat-button class="button-rosado" (click)="onOpenModal()">Agregar producto</button>-->
-        <button mat-flat-button class="button-rosado" (click)="createPdf()">Imprimir Reporte</button>
-        <!--<button
-              class="button-rosado"
-
-              (click)="applyDateFilterPorVencer()"
-              >Consultar</button>-->
+        <button
+          mat-button
+          mat-raised-button
+          class="button-yellow"
+          (click)="onOpenModal(element)"
+        >
+          Detalles
+        </button>
       </div>
+    </td>
+  </ng-container>
 
-      <div class="table-range">
-        <form [formGroup]="rangeForm">
-          <mat-form-field appearance="outline" class="search-form-field" >
-            <mat-label>Buscar por proveedor</mat-label>
-            <input matInput formControlName="buscar" color="accent" placeholder="Buscar por proveedor" autocomplete="off" (keyup)="cargarEnTablaSiCampoVacio($event.target.value)" />
-            <mat-error *ngIf="rangeForm.controls.buscar.hasError('matBuscarInvalid')">LLene el campo</mat-error>
-          </mat-form-field>
-          <mat-form-field appearance="outline" class="search-form-range">
-            <mat-label>fecha compra </mat-label>
-            <mat-date-range-input  [rangePicker]="picker">
-              <input matStartDate formControlName="start" placeholder="Fecha inicial">
-              <input matEndDate formControlName="end" placeholder="Fecha final">
-            </mat-date-range-input>
-            <mat-hint>MM/DD/YYYY – MM/DD/YYYY</mat-hint>
-            <mat-datepicker-toggle matSuffix [for]="picker"></mat-datepicker-toggle>
-            <mat-date-range-picker #picker></mat-date-range-picker>
-
-            <mat-error *ngIf="rangeForm.controls.start.hasError('matStartDateInvalid')">Primera fecha inválido</mat-error>
-            <mat-error *ngIf="rangeForm.controls.end.hasError('matEndDateInvalid')">Segunda fecha inválido</mat-error>
-          </mat-form-field>
-
-          <button
-              class="button-form-consultar"
-              mat-raised-button color="accent"
-              (click)="applyDateFilter()"
-              [disabled]="(rangeForm.get('buscar').invalid && (rangeForm.get('start').invalid || rangeForm.get('end').invalid))"  >Consultar</button>
-          <button
-              class="button-form-limpiar"
-              mat-raised-button color="accent"
-              (click)="clearFilter()"
-              [disabled]=" (rangeForm.get('start').invalid || rangeForm.get('end').invalid) && (rangeForm.get('buscar').invalid) ">Limpiar</button>
-        </form>
-
-
-      </div>
-    </div>
-
-    <table mat-table [dataSource]="dataSource" matSort >
-
-
-
-      <!-- Position Column-->
-      <ng-container matColumnDef="nombreproveedor">
-        <th mat-header-cell *matHeaderCellDef mat-sort-header> NOMBRE<br> PROVEEDOR </th>
-        <td mat-cell *matCellDef="let element"> {{element.proveedor.nombre}} </td>
-      </ng-container>
-
-      <!-- Position Column-->
-      <ng-container matColumnDef="nombreproducto">
-        <th mat-header-cell *matHeaderCellDef mat-sort-header> NOMBRE<br> PRODUCTO </th>
-        <td mat-cell *matCellDef="let element"> {{element.producto.nombre}} </td>
-      </ng-container>
-
-
-      <!-- Name Column -->
-      <ng-container matColumnDef="precio_compra_uni">
-        <th mat-header-cell *matHeaderCellDef mat-sort-header> PRECIO<br> UNIDAD </th>
-        <td mat-cell *matCellDef="let element"> {{element.precio_compra_uni}} </td>
-      </ng-container>
-
-      <!-- Weight Column -->
-      <ng-container matColumnDef="precio_compra_total">
-        <th mat-header-cell *matHeaderCellDef mat-sort-header> PRECIO<br> TOTAL </th>
-        <td mat-cell *matCellDef="let element" class="center"> {{element.precio_compra_total}} </td>
-      </ng-container>
-
-      <!-- Name Column
-      <ng-container  matColumnDef="tipo_comprobante">
-        <th mat-header-cell *matHeaderCellDef mat-sort-header> TIPO<br> COMPROBANTE </th>
-        <td  mat-cell *matCellDef="let element"> {{element.tipo_comprobante}} </td>
-      </ng-container>-->
-
-      <!-- Name Column
-      <ng-container  matColumnDef="num_comprobante">
-        <th mat-header-cell *matHeaderCellDef mat-sort-header> NÚMERO<br> COMPROBANTE </th>
-        <td  mat-cell *matCellDef="let element"> {{element.num_comprobante}} </td>
-      </ng-container>-->
-
-
-      <!-- Name Column -->
-      <ng-container  matColumnDef="cantidad_ingreso">
-        <th mat-header-cell *matHeaderCellDef mat-sort-header> CANTIDAD<br> INGRESO </th>
-        <td  mat-cell *matCellDef="let element"> {{element.cantidad_ingreso}} </td>
-      </ng-container>
-
-      <!-- Name Column -->
-      <ng-container  matColumnDef="observacion">
-        <th mat-header-cell *matHeaderCellDef mat-sort-header> OBSERVACIÓN </th>
-        <td  mat-cell *matCellDef="let element"> {{element.observacion}} </td>
-      </ng-container>
-
-
-      <!-- Name Column -->
-      <ng-container  matColumnDef="fecha">
-        <th mat-header-cell *matHeaderCellDef mat-sort-header> FECHA </th>
-        <td  mat-cell *matCellDef="let element"> {{element.fecha | date: 'dd-MM-YYYY'}} </td>
-      </ng-container>
-
-
-
-      <!-- Name Column -->
-      <ng-container  matColumnDef="hora">
-        <th mat-header-cell *matHeaderCellDef mat-sort-header> HORA </th>
-        <td  mat-cell *matCellDef="let element"> {{element.hora}} </td>
-      </ng-container>
-
-
-      <!-- Name Column
-      <ng-container  matColumnDef="estado" *ngIf=""> -->
-        <!--<th mat-header-cell *matHeaderCellDef mat-sort-header> ESTADO </th>
-        <td  mat-cell *matCellDef="let element" >
-          <button mat-button mat-raised-button class="color-estado"> {{element.estado}} </button>
-        </td>-->
-
-    <!--  </ng-container>-->
-
-    <!--  <ng-template #estadoEspera>
-        <th mat-header-cell *matHeaderCellDef mat-sort-header> ESTADO </th>
-        <td  mat-cell *matCellDef="let element" >
-          <button mat-button mat-raised-button class="color-estado"> {{element.estado}} </button>
-        </td>
-      </ng-template>
-      <ng-template #estadoAbierto>
-        <th mat-header-cell *matHeaderCellDef mat-sort-header> ESTADO </th>
-        <td  mat-cell *matCellDef="let element" >
-          <button mat-button mat-raised-button class="color-estado"> {{element.estado}} </button>
-        </td>
-      </ng-template>-->
-
-
-
-
-      <!-- Name Column -->
-      <ng-container  matColumnDef="actions">
-        <th mat-header-cell *matHeaderCellDef mat-sort-header class="actionCampo"> ACCIONES  </th>
-        <td  mat-cell *matCellDef="let element">
-          <div class="table-button-row">
-            <!--<button mat-raised-button  class="button-yellow" (click)="onOpenModal(element)">Editar</button>
-            <button mat-flat-button color="warn" (click)="onDelete(element.idusuario)">Eliminar</button>-->
-            <button mat-button mat-raised-button  class="button-yellow" (click)="onOpenModal(element)">Detalles</button>
-            <!--<button mat-button mat-raised-button  color="warn" (click)="onDelete(element.idcompra)">Eliminar</button>
-            <button mat-button mat-raised-button  color="primary" (click)="onOpenModalVentas(element)">Enviar</button>-->
-
-
-          </div>
-
-        </td>
-
-
-      </ng-container>
-
-      <tr mat-header-row *matHeaderRowDef="displayedColumns"></tr>
-      <tr mat-row *matRowDef="let row; columns: displayedColumns;"></tr>
-
-    </table>
-    <mat-paginator class="paginator" [pageSizeOptions]="[5,10,25,100]" [pageSize]="5" showFirstLastButtons></mat-paginator>
+  <tr mat-header-row *matHeaderRowDef="displayedColumns"></tr>
+  <tr mat-row *matRowDef="let row; columns: displayedColumns"></tr>
+</table>
+<mat-paginator
+  class="paginator"
+  [pageSizeOptions]="[5, 10, 25, 100]"
+  [pageSize]="5"
+  showFirstLastButtons
+></mat-paginator>
