--- a/src/app/components/admin/masvendidos/masvendidos.component.html
+++ b/src/app/components/admin/masvendidos/masvendidos.component.html
@@ -1,110 +1,118 @@
- <div class="caja-range-btnAgrega-pdf">
+<div class="caja-range-btnAgrega-pdf">
+  <div class="table-button-row">
+    <button mat-flat-button class="button-rosado" (click)="createPdf()">
+      Imprimir Reporte
+    </button>
+  </div>
+
+  <div class="table-range">
+    <form [formGroup]="rangeForm">
+      <mat-form-field appearance="outline" class="search-form-range">
+        <mat-label>Rango de fechas</mat-label>
+        <mat-date-range-input [rangePicker]="picker">
+          <input
+            matStartDate
+            formControlName="start"
+            placeholder="Fecha inicial"
+          />
+          <input matEndDate formControlName="end" placeholder="Fecha final" />
+        </mat-date-range-input>
+        <mat-hint>MM/DD/YYYY – MM/DD/YYYY</mat-hint>
+        <mat-datepicker-toggle matSuffix [for]="picker"></mat-datepicker-toggle>
+        <mat-date-range-picker #picker></mat-date-range-picker>
+
+        <mat-error
+          *ngIf="rangeForm.controls.start.hasError('matStartDateInvalid')"
+          >Primera fecha inválido</mat-error
+        >
+        <mat-error *ngIf="rangeForm.controls.end.hasError('matEndDateInvalid')"
+          >Segunda fecha inválido</mat-error
+        >
+      </mat-form-field>
+
+      <button
+        class="button-form-consultar"
+        mat-raised-button
+        color="accent"
+        (click)="applyDateFilter()"
+        [disabled]="
+          rangeForm.get('start').invalid || rangeForm.get('end').invalid
+        "
+      >
+        Consultar
+      </button>
+      <button
+        class="button-form-limpiar"
+        mat-raised-button
+        color="accent"
+        (click)="clearFilter()"
+        [disabled]="
+          rangeForm.get('start').invalid || rangeForm.get('end').invalid
+        "
+      >
+        Limpiar
+      </button>
+    </form>
+  </div>
+</div>
+
+<table mat-table [dataSource]="dataSource" matSort>
+  <!-- Name Column -->
+  <ng-container matColumnDef="nombre">
+    <th mat-header-cell *matHeaderCellDef mat-sort-header>
+      NOMBRE <br />
+      PRODUCTO
+    </th>
+    <td mat-cell *matCellDef="let element">{{ element.nombre }}</td>
+  </ng-container>
+
+  <!-- Weight Column -->
+  <ng-container matColumnDef="sumacantidad">
+    <th mat-header-cell *matHeaderCellDef mat-sort-header>
+      SUMA PRODUCTO<br />
+      MÁS VENDIDOS
+    </th>
+    <td mat-cell *matCellDef="let element" class="center">
+      {{ element.sumacantidad }}
+    </td>
+  </ng-container>
+
+  <!-- Name Column -->
+  <ng-container matColumnDef="createdAt">
+    <th mat-header-cell *matHeaderCellDef mat-sort-header>
+      FECHA <br />
+      VENTA
+    </th>
+    <td mat-cell *matCellDef="let element">
+      {{ element.createdAt | date : "dd-MM-YYYY" }}
+    </td>
+  </ng-container>
+
+  <!-- Name Column -->
+  <ng-container matColumnDef="actions">
+    <th mat-header-cell *matHeaderCellDef mat-sort-header class="actionCampo">
+      ACCIONES
+    </th>
+    <td mat-cell *matCellDef="let element">
       <div class="table-button-row">
-        <!--<button mat-flat-button class="button-rosado" (click)="onOpenModal()">Crear Categoria</button>-->
-        <button mat-flat-button class="button-rosado" (click)="createPdf()">Imprimir Reporte</button>
-        <!--<mat-form-field appearance="outline" class="search-form-field" floatLabel="never">
-          <input matInput   placeholder="Buscar" autocomplete="off" (keyup)="applyFilter($event.target.value)"/>
-
-        </mat-form-field>-->
-
+        <button
+          mat-button
+          mat-raised-button
+          class="button-yellow"
+          (click)="onOpenModal(element)"
+        >
+          Detalles
+        </button>
       </div>
+    </td>
+  </ng-container>
 
-      <div class="table-range">
-        <form [formGroup]="rangeForm">
-          <!--<mat-form-field appearance="outline" class="search-form-field" >
-            <mat-label>Buscar</mat-label>
-            <input matInput formControlName="buscar" color="accent" placeholder="Buscar" autocomplete="off" (keyup)="cargarEnTablaSiCampoVacio($event.target.value)" />
-            <mat-error *ngIf="rangeForm.controls.buscar.hasError('matBuscarInvalid')">LLene el campo</mat-error>
-          </mat-form-field>-->
-          <mat-form-field appearance="outline" class="search-form-range">
-            <mat-label>Rango de fechas</mat-label>
-            <mat-date-range-input  [rangePicker]="picker">
-              <input matStartDate formControlName="start" placeholder="Fecha inicial">
-              <input matEndDate formControlName="end" placeholder="Fecha final">
-            </mat-date-range-input>
-            <mat-hint>MM/DD/YYYY – MM/DD/YYYY</mat-hint>
-            <mat-datepicker-toggle matSuffix [for]="picker"></mat-datepicker-toggle>
-            <mat-date-range-picker #picker></mat-date-range-picker>
-
-            <mat-error *ngIf="rangeForm.controls.start.hasError('matStartDateInvalid')">Primera fecha inválido</mat-error>
-            <mat-error *ngIf="rangeForm.controls.end.hasError('matEndDateInvalid')">Segunda fecha inválido</mat-error>
-          </mat-form-field>
-
-          <button
-              class="button-form-consultar"
-              mat-raised-button color="accent"
-              (click)="applyDateFilter()"
-              [disabled]="( (rangeForm.get('start').invalid || rangeForm.get('end').invalid))"  >Consultar</button>
-          <button
-              class="button-form-limpiar"
-              mat-raised-button color="accent"
-              (click)="clearFilter()"
-              [disabled]=" (rangeForm.get('start').invalid || rangeForm.get('end').invalid) ">Limpiar</button>
-        </form>
-
-
-      </div>
-    </div>
-
-    <table mat-table [dataSource]="dataSource" matSort >
-
-
-      <!-- Position Column
-      <ng-container matColumnDef="idproducto">
-        <th mat-header-cell *matHeaderCellDef mat-sort-header> ID <br> PRODUCTO </th>
-        <td mat-cell *matCellDef="let element"> {{element.idproducto} </td>
-      </ng-container>-->
-
-
-      <!-- Name Column -->
-      <ng-container matColumnDef="nombre">
-        <th mat-header-cell *matHeaderCellDef mat-sort-header> NOMBRE <br> PRODUCTO </th>
-        <td mat-cell *matCellDef="let element"> {{element.nombre}} </td>
-      </ng-container>
-
-      <!-- Weight Column -->
-      <ng-container matColumnDef="sumacantidad">
-        <th mat-header-cell *matHeaderCellDef mat-sort-header> SUMA  PRODUCTO<br> MÁS VENDIDOS </th>
-        <td mat-cell *matCellDef="let element" class="center"> {{element.sumacantidad}} </td>
-      </ng-container>
-
-      <!-- Name Column -->
-      <ng-container matColumnDef="createdAt">
-        <th mat-header-cell *matHeaderCellDef mat-sort-header> FECHA <br> VENTA </th>
-        <td mat-cell *matCellDef="let element"> {{element.createdAt | date: 'dd-MM-YYYY'}} </td>
-      </ng-container>
-
-
-
-
-
-      <!-- Name Column -->
-      <ng-container  matColumnDef="actions">
-        <th mat-header-cell *matHeaderCellDef mat-sort-header class="actionCampo"> ACCIONES  </th>
-        <td  mat-cell *matCellDef="let element">
-          <div class="table-button-row">
-            <!--<button mat-raised-button  class="button-yellow" (click)="onOpenModal(element)">Editar</button>
-            <button mat-flat-button color="warn" (click)="onDelete(element.idusuario)">Eliminar</button>-->
-            <button mat-button mat-raised-button  class="button-yellow" (click)="onOpenModal(element)">Detalles</button>
-            <!--<button mat-button mat-raised-button  color="warn" (click)="onDelete(element.idpedido)">Eliminar</button>
-            <button mat-button mat-raised-button  color="primary" (click)="onOpenModalVentas(element)">Enviar</button>-->
-
-
-          </div>
-
-        </td>
-
-
-
-
-
-      </ng-container>
-
-      <tr mat-header-row *matHeaderRowDef="displayedColumns"></tr>
-      <tr mat-row *matRowDef="let row; columns: displayedColumns;"></tr>
-
-    </table>
-    <mat-paginator class="paginator" [pageSizeOptions]="[5,10,25,100]" [pageSize]="5" showFirstLastButtons></mat-paginator>
-
-
-
+  <tr mat-header-row *matHeaderRowDef="displayedColumns"></tr>
+  <tr mat-row *matRowDef="let row; columns: displayedColumns"></tr>
+</table>
+<mat-paginator
+  class="paginator"
+  [pageSizeOptions]="[5, 10, 25, 100]"
+  [pageSize]="5"
+  showFirstLastButtons
+></mat-paginator>
