--- a/src/app/components/admin/modalcompras/modalcompras.component.html
+++ b/src/app/components/admin/modalcompras/modalcompras.component.html
@@ -1,133 +1,114 @@
-<!--    <div class="table-button-row">
-
-      <button mat-flat-button class="button-rosado" (click)="onOpenModal()">Poner funcionalidadddd</button>
-      <mat-form-field appearance="outline" class="search-form-field" floatLabel="never">
-        <input matInput   placeholder="Buscar" autocomplete="off" (keyup)="applyFilter($event.target.value)"/>
-
-      </mat-form-field>
-    </div>-->
-    <div class="detall-producto">
-     <h1>DETALLES DE PRODUCTO</h1>
-    </div>
-
-    <table mat-table [dataSource]="dataSource" matSort >
-
-
-      <!-- Position Column -->
-      <ng-container matColumnDef="idproducto">
-        <th mat-header-cell *matHeaderCellDef mat-sort-header> CÓDIGO </th>
-        <td mat-cell *matCellDef="let element"> {{element.producto.idproducto}} </td>
-      </ng-container>
-
-
-      <!-- Name Column -->
-      <ng-container matColumnDef="nombre">
-        <th mat-header-cell *matHeaderCellDef mat-sort-header> NOMBRE </th>
-        <td mat-cell *matCellDef="let element"> {{element.producto.nombre}} </td>
-      </ng-container>
-
-      <!-- Weight Column -->
-      <ng-container matColumnDef="stock">
-        <th mat-header-cell *matHeaderCellDef mat-sort-header><label> STOCK</label>  </th>
-        <td mat-cell *matCellDef="let element" class="center"> {{element.producto.stock}} </td>
-      </ng-container>
-
-
-
-
-      <!-- Name Column -->
-      <ng-container  matColumnDef="vencimiento">
-        <th mat-header-cell *matHeaderCellDef mat-sort-header>  VENCIMIENTO </th>
-        <td  mat-cell *matCellDef="let element"> {{element.producto.vencimiento}} </td>
-      </ng-container>
-
-
-      <!-- Name Column-->
-      <ng-container  matColumnDef="precio">
-        <th mat-header-cell *matHeaderCellDef mat-sort-header>  PRECIO </th>
-        <td  mat-cell *matCellDef="let element"> {{element.producto.precio}} </td>
-      </ng-container>
-
-
-
-
-
-
-      <tr mat-header-row *matHeaderRowDef="displayedColumns"></tr>
-      <tr mat-row *matRowDef="let row; columns: displayedColumns;"></tr>
-
-    </table>
-    <mat-paginator class="paginator" [pageSizeOptions]="[5,10,25,100]" [pageSize]="5" showFirstLastButtons></mat-paginator>
-
-
-
-<br>
-<br>
-<mat-divider>
-</mat-divider>
 <div class="detall-producto">
-     <h1>DETALLE DE PROVEEDOR</h1>
+  <h1>DETALLES DE PRODUCTO</h1>
+</div>
+
+<table mat-table [dataSource]="dataSource" matSort>
+  <!-- Position Column -->
+  <ng-container matColumnDef="idproducto">
+    <th mat-header-cell *matHeaderCellDef mat-sort-header>CÓDIGO</th>
+    <td mat-cell *matCellDef="let element">
+      {{ element.producto.idproducto }}
+    </td>
+  </ng-container>
+
+  <!-- Name Column -->
+  <ng-container matColumnDef="nombre">
+    <th mat-header-cell *matHeaderCellDef mat-sort-header>NOMBRE</th>
+    <td mat-cell *matCellDef="let element">{{ element.producto.nombre }}</td>
+  </ng-container>
+
+  <!-- Weight Column -->
+  <ng-container matColumnDef="stock">
+    <th mat-header-cell *matHeaderCellDef mat-sort-header>
+      <label> STOCK</label>
+    </th>
+    <td mat-cell *matCellDef="let element" class="center">
+      {{ element.producto.stock }}
+    </td>
+  </ng-container>
+
+  <!-- Name Column -->
+  <ng-container matColumnDef="vencimiento">
+    <th mat-header-cell *matHeaderCellDef mat-sort-header>VENCIMIENTO</th>
+    <td mat-cell *matCellDef="let element">
+      {{ element.producto.vencimiento }}
+    </td>
+  </ng-container>
+
+  <!-- Name Column-->
+  <ng-container matColumnDef="precio">
+    <th mat-header-cell *matHeaderCellDef mat-sort-header>PRECIO</th>
+    <td mat-cell *matCellDef="let element">{{ element.producto.precio }}</td>
+  </ng-container>
+
+  <tr mat-header-row *matHeaderRowDef="displayedColumns"></tr>
+  <tr mat-row *matRowDef="let row; columns: displayedColumns"></tr>
+</table>
+<mat-paginator
+  class="paginator"
+  [pageSizeOptions]="[5, 10, 25, 100]"
+  [pageSize]="5"
+  showFirstLastButtons
+></mat-paginator>
+
+<br />
+<br />
+<mat-divider> </mat-divider>
+<div class="detall-producto">
+  <h1>DETALLE DE PROVEEDOR</h1>
 </div>
 <!--------------------------------otra sección usuario------------------------------------------------------------------------------->
-   <table mat-table [dataSource]="dataSourceProveedor" matSort >
+<table mat-table [dataSource]="dataSourceProveedor" matSort>
+  <!-- Name Column -->
+  <ng-container matColumnDef="idproveedor">
+    <th mat-header-cell *matHeaderCellDef mat-sort-header>CÓDIGO</th>
+    <td mat-cell *matCellDef="let element">
+      {{ element.proveedor.idproveedor }}
+    </td>
+  </ng-container>
 
+  <!-- Name Column -->
+  <ng-container matColumnDef="nombre">
+    <th mat-header-cell *matHeaderCellDef mat-sort-header>NOMBRE</th>
+    <td mat-cell *matCellDef="let element">{{ element.proveedor.nombre }}</td>
+  </ng-container>
 
+  <!-- Name Column -->
+  <ng-container matColumnDef="ci_nit">
+    <th mat-header-cell *matHeaderCellDef mat-sort-header>CI_NIT</th>
+    <td mat-cell *matCellDef="let element">{{ element.proveedor.ci_nit }}</td>
+  </ng-container>
 
-      <!-- Name Column -->
-      <ng-container matColumnDef="idproveedor">
-        <th mat-header-cell *matHeaderCellDef mat-sort-header> CÓDIGO </th>
-        <td mat-cell *matCellDef="let element"> {{element.proveedor.idproveedor}} </td>
-      </ng-container>
+  <!-- Name Column -->
+  <ng-container matColumnDef="telefono">
+    <th mat-header-cell *matHeaderCellDef mat-sort-header>TELÉFONO</th>
+    <td mat-cell *matCellDef="let element">{{ element.proveedor.telefono }}</td>
+  </ng-container>
+  <!-- Name Column -->
+  <ng-container matColumnDef="email">
+    <th mat-header-cell *matHeaderCellDef mat-sort-header>CORRÉO</th>
+    <td mat-cell *matCellDef="let element">{{ element.proveedor.email }}</td>
+  </ng-container>
 
+  <!-- Name Column -->
+  <ng-container matColumnDef="direccion">
+    <th mat-header-cell *matHeaderCellDef mat-sort-header>DIRECCIÓN</th>
+    <td mat-cell *matCellDef="let element">
+      {{ element.proveedor.direccion }}
+    </td>
+  </ng-container>
 
-      <!-- Name Column -->
-      <ng-container  matColumnDef="nombre">
-        <th mat-header-cell *matHeaderCellDef mat-sort-header> NOMBRE </th>
-        <td  mat-cell *matCellDef="let element"> {{element.proveedor.nombre}} </td>
-      </ng-container>
-
-      <!-- Name Column -->
-      <ng-container  matColumnDef="ci_nit">
-        <th mat-header-cell *matHeaderCellDef mat-sort-header> CI_NIT </th>
-        <td  mat-cell *matCellDef="let element"> {{element.proveedor.ci_nit}} </td>
-      </ng-container>
-
-       <!-- Name Column -->
-      <ng-container  matColumnDef="telefono">
-        <th mat-header-cell *matHeaderCellDef mat-sort-header> TELÉFONO </th>
-        <td  mat-cell *matCellDef="let element"> {{element.proveedor.telefono}} </td>
-      </ng-container>
-       <!-- Name Column -->
-      <ng-container  matColumnDef="email">
-        <th mat-header-cell *matHeaderCellDef mat-sort-header> CORRÉO </th>
-        <td  mat-cell *matCellDef="let element"> {{element.proveedor.email}} </td>
-      </ng-container>
-
-       <!-- Name Column -->
-      <ng-container  matColumnDef="direccion">
-        <th mat-header-cell *matHeaderCellDef mat-sort-header> DIRECCIÓN </th>
-        <td  mat-cell *matCellDef="let element"> {{element.proveedor.direccion}} </td>
-      </ng-container>
-
-
-
-      <tr mat-header-row *matHeaderRowDef="displayedColumnsProveedor"></tr>
-      <tr mat-row *matRowDef="let row; columns: displayedColumnsProveedor;"></tr>
-
-    </table>
-
-
+  <tr mat-header-row *matHeaderRowDef="displayedColumnsProveedor"></tr>
+  <tr mat-row *matRowDef="let row; columns: displayedColumnsProveedor"></tr>
+</table>
 
 <!-----------------------------------------------Seccion para insertar vendedor ventas repartidor-------------->
 
-
-
 <!--{{userForm.status}} status-->
 
-<mat-dialog-actions >
-    <button mat-button   (click)="createPdf()" class="btn-cancel">Imprimir reporte</button>
-    <button mat-button  mat-dialog-close class="btn-actionsCancel">Cerrar</button>
-
-
-
+<mat-dialog-actions>
+  <button mat-button (click)="createPdf()" class="btn-cancel">
+    Imprimir reporte
+  </button>
+  <button mat-button mat-dialog-close class="btn-actionsCancel">Cerrar</button>
 </mat-dialog-actions>
