--- a/src/app/components/admin/modaloferta/modaloferta.component.html
+++ b/src/app/components/admin/modaloferta/modaloferta.component.html
@@ -1,60 +1,72 @@
-<h2 mat-dialog-title>{{data?.title}}</h2>
+<h2 mat-dialog-title>{{ data?.title }}</h2>
 <mat-dialog-content>
-    <div class="modal-form">
-        <form [formGroup]="productoForm" >
+  <div class="modal-form">
+    <form [formGroup]="productoForm">
+      <mat-form-field class="full-width-input">
+        <mat-label>Seleccione disponible</mat-label>
+        <mat-select formControlName="oferta" required>
+          <mat-option value="SI">SI</mat-option>
+          <mat-option value="NO">NO</mat-option>
+        </mat-select>
+        <mat-error *ngIf="checkFieldProducto('oferta')">
+          {{ getErrorMessageProducto("oferta") }}
+        </mat-error>
+      </mat-form-field>
 
+      <mat-form-field class="full-width-input">
+        <input
+          formControlName="porcentaje"
+          matInput
+          type="number"
+          placeholder="Porcentaje"
+          readonly="{{ productoForm.get('oferta').value != 'SI' }}"
+          value="{{
+            productoForm.get('oferta').value != 'SI'
+              ? 0
+              : data?.productos?.porcentaje
+          }}"
+        />
 
-
-
-
-            <mat-form-field class="full-width-input">
-                <mat-label>Seleccione disponible</mat-label>
-                <mat-select formControlName="oferta"   required>
-                    <mat-option value="SI">SI</mat-option>
-                    <mat-option value="NO">NO</mat-option>
-                </mat-select>
-            <mat-error *ngIf="checkFieldProducto('oferta')">
-                    {{getErrorMessageProducto('oferta')}}
-                </mat-error>
-            </mat-form-field>
-
-
-
-            <mat-form-field class="full-width-input">
-                <input formControlName="porcentaje" matInput placeholder="Porcentaje"   required/>
-                <mat-error *ngIf="checkFieldProducto('porcentaje')">
-                    {{getErrorMessageProducto('porcentaje')}}
-                </mat-error>
-            </mat-form-field>
-
-
-
-
-
-        </form>
-    </div>
-
-
-
-
-
+        <mat-error *ngIf="checkFieldProducto('porcentaje')">
+          {{ getErrorMessageProducto("porcentaje") }}
+        </mat-error>
+      </mat-form-field>
+    </form>
+  </div>
 </mat-dialog-content>
 
-<!--{{userForm.status}} status-->
+<!--*ngIf="data?.productos?.oferta === 'SI'; else disabledInputPorcentaje"-->
+<ng-template #disabledInputPorcentaje>
+  <mat-form-field class="full-width-input">
+    <input
+      formControlName="porcentaje"
+      matInput
+      placeholder="Porcentajesss"
+      readonly="true"
+    />
+  </mat-form-field>
+</ng-template>
 
-<mat-dialog-actions >
-  <button mat-button mat-dialog-close class="btn-actionsCancel">Cancelar</button>
-    <button
+<!--{{ productoForm.get("oferta").value }}
+{{ data?.productos?.oferta }} eferta-->
+
+<mat-dialog-actions>
+  <button mat-button mat-dialog-close class="btn-actionsCancel">
+    Cancelar
+  </button>
+  <button
     mat-raised-button
     [mat-dialog-close]="true"
     color="primary"
     (click)="onSave()"
     ckdFocusInitial
-    [disabled]="!productoForm.valid "
+    [disabled]="
+      !productoForm.valid ||
+      (productoForm.get('porcentaje').value == 0 &&
+        productoForm.get('oferta').value == 'SI')
+    "
     class="btn-actionsSave"
-    >Guardar</button>
-
+  >
+    Guardar
+  </button>
 </mat-dialog-actions>
-
-
-
