--- a/src/app/components/admin/modalpedido/modalpedido.component.css
+++ b/src/app/components/admin/modalpedido/modalpedido.component.css
@@ -1,107 +1,92 @@
+table {
+  width: 95%;
+  margin: 0 auto;
+  margin-top: 1rem;
 
-table{
-    width: 95%;
-    margin: 0 auto;
-    margin-top: 1rem;
+  table-layout: fixed;
+}
+th,
+td {
+  overflow: hidden;
+  width: 50px;
+  text-overflow: ellipsis;
+  white-space: nowrap;
+}
+.mat-column-idpedidoproducto {
+  flex: none;
+  width: 4%;
+}
 
-    table-layout: fixed;
+.mat-column-cantidad {
+  flex: none;
+  width: 4%;
+}
 
+.mat-column-precio_uni {
+  flex: none;
+  width: 5%;
+}
 
- }
- th,td{
-     overflow: hidden;
-     width: 50px;
-     text-overflow: ellipsis;
-     white-space: nowrap;
- }
- .mat-column-idpedidoproducto {
-     flex: none;
-     width: 4%;
- }
+.mat-column-precio_total {
+  flex: none;
+  width: 5%;
+}
+.mat-column-idproducto {
+  flex: none;
+  width: 1%;
+}
 
- .mat-column-cantidad {
-     flex: none;
-     width: 4%;
- }
+.mat-column-productonombre {
+  flex: none;
+  width: 10%;
+}
 
- .mat-column-precio_uni {
-     flex: none;
-     width: 5%;
+.mat-column-descripcion {
+  flex: none;
+  width: 4%;
+}
 
- }
+.search-div {
+  margin: 10px;
+}
+.search-form-field {
+  width: 30%;
+  margin-left: 2%;
+}
+.paginator {
+  width: 95%;
+}
 
+th.mat-sort-header-sorted {
+  color: black;
+}
 
-.mat-column-precio_total{
-     flex: none;
-     width: 5%;
- }
- .mat-column-idproducto{
-     flex: none;
-     width: 1%;
- }
+th.mat-header-cell {
+  background-color: #79dae8;
+  /*background-color: rgb(54, 190, 88);*/
+  color: #2155cd;
 
+  font-weight: bold;
+  font-family: Arial;
 
+  text-align: left;
+  max-width: 300px;
+}
 
- .mat-column-productonombre{
-     flex: none;
-     width: 10%;
- }
-
- .mat-column-descripcion{
-     flex: none;
-     width: 4%;
- }
-
-
- .search-div{
-     margin: 10px;
- }
- .search-form-field{
-     width: 30%;
-     margin-left: 2%;
-
-
-
- }
- .paginator{
-     width: 95%;
- }
-
- th.mat-sort-header-sorted{
-     color: black;
- }
-
- th.mat-header-cell{
-    background-color: #79DAE8;
-     /*background-color: rgb(54, 190, 88);*/
-     color: #2155CD;
-
-     font-weight: bold;
-     font-family: Arial;
-
-     text-align: left;
-     max-width: 300px;
-
- }
-
-
-
-
- .table-button-row button{
-     margin: 12px;
-
- }
- .detall-pedido{
-     font-size: x-large;
-     font-weight: bold;
-     font-family: 'Lucida Sans';
-     text-align: center;
-     font-style: normal;
-     color: blue;
- }
- .btn-cancel{
-     left: 45%;
-     top: auto;
-     background-color: rgb(43, 106, 201);
-     color: #ffffff;
- }
+.table-button-row button {
+  margin: 12px;
+}
+.detall-pedido {
+  font-size: x-large;
+  font-weight: bold;
+  font-family: "Lucida Sans";
+  text-align: center;
+  font-style: normal;
+  color: blue;
+}
+.btn-cancel {
+  left: 45%;
+  top: auto;
+  background-color: rgb(43, 106, 201);
+  color: #ffffff;
+}
