--- a/src/app/components/admin/modalproducto/modalproducto.component.css
+++ b/src/app/components/admin/modalproducto/modalproducto.component.css
@@ -1,63 +1,50 @@
-.modal-form{
-    padding: 1rem 0;
-
-
+.modal-form {
+  padding: 1rem 0;
 }
-.modal-form .full-width-input{
-        width: 25%;
+.modal-form .full-width-input {
+  width: 25%;
 }
-.modal-form .full-width-input-medio{
-        width: 50%;
+.modal-form .full-width-input-medio {
+  width: 50%;
 }
-.modal-form .full-width-input-unidad{
-        width: 10%;
-        position:absolute;
-
-
+.modal-form .full-width-input-unidad {
+  width: 10%;
+  position: absolute;
 }
 
-
-input[type='file']{
-    display: none;
+input[type="file"] {
+  display: none;
 }
-.custom-file{
-    border: 1px solid #ccc;
-    display: inline-block;
-    padding: 6px 0;
-    cursor: pointer;
-    width: 100%;
-
+.custom-file {
+  border: 1px solid #ccc;
+  display: inline-block;
+  padding: 6px 0;
+  cursor: pointer;
+  width: 100%;
 }
-mat-card{
-    max-width: 150px;
-    margin: 2em auto;
+mat-card {
+  max-width: 150px;
+  margin: 2em auto;
 
-    max-height: 350px;
-    margin-left: 700px;
-    margin-top: -40px;
-    margin-bottom: 10px;
-    position: absolute;
-
+  max-height: 350px;
+  margin-left: 700px;
+  margin-top: -40px;
+  margin-bottom: 10px;
+  position: absolute;
 }
 
-.img-fluid{
-    max-width: 150px;
-    max-height: 150px;
-
+.img-fluid {
+  max-width: 150px;
+  max-height: 150px;
 }
 
- .btn-actionsCancel {
-
-    position: absolute;
-    margin-left: 250px;
-    margin-top: 50px;
+.btn-actionsCancel {
+  position: absolute;
+  margin-left: 250px;
+  margin-top: 50px;
 }
- .btn-actionsSave {
-
-    position: absolute;
-    margin-left: 350px;
-    margin-top: 50px;
+.btn-actionsSave {
+  position: absolute;
+  margin-left: 350px;
+  margin-top: 50px;
 }
-
-
-
