--- a/src/app/components/admin/pedido/pedido.component.html
+++ b/src/app/components/admin/pedido/pedido.component.html
@@ -1,169 +1,151 @@
-<!--{{dataSource.data | json}}-->
+<div class="caja-range-btnAgrega-pdf">
+  <div class="table-button-row">
+    <button mat-flat-button class="button-rosado" (click)="createPdf()">
+      Imprimir Reporte
+    </button>
+  </div>
 
+  <div class="table-range">
+    <form [formGroup]="rangeForm">
+      <mat-form-field appearance="outline" class="search-form-field">
+        <mat-label>Buscar estado</mat-label>
+        <input
+          matInput
+          formControlName="buscar"
+          color="accent"
+          placeholder="Buscar estado"
+          autocomplete="off"
+          (keyup)="cargarEnTablaSiCampoVacio($event.target.value)"
+        />
+        <mat-error
+          *ngIf="rangeForm.controls.buscar.hasError('matBuscarInvalid')"
+          >LLene el campo</mat-error
+        >
+      </mat-form-field>
+      <mat-form-field appearance="outline" class="search-form-range">
+        <mat-label>Fecha de pedido</mat-label>
+        <mat-date-range-input [rangePicker]="picker">
+          <input
+            matStartDate
+            formControlName="start"
+            placeholder="Fecha inicial"
+          />
+          <input matEndDate formControlName="end" placeholder="Fecha final" />
+        </mat-date-range-input>
+        <mat-hint>MM/DD/YYYY – MM/DD/YYYY</mat-hint>
+        <mat-datepicker-toggle matSuffix [for]="picker"></mat-datepicker-toggle>
+        <mat-date-range-picker #picker></mat-date-range-picker>
 
-     <div class="caja-range-btnAgrega-pdf">
+        <mat-error
+          *ngIf="rangeForm.controls.start.hasError('matStartDateInvalid')"
+          >Primera fecha inválido</mat-error
+        >
+        <mat-error *ngIf="rangeForm.controls.end.hasError('matEndDateInvalid')"
+          >Segunda fecha inválido</mat-error
+        >
+      </mat-form-field>
+
+      <button
+        class="button-form-consultar"
+        mat-raised-button
+        color="accent"
+        (click)="applyDateFilter()"
+        [disabled]="
+          rangeForm.get('buscar').invalid &&
+          (rangeForm.get('start').invalid || rangeForm.get('end').invalid)
+        "
+      >
+        Consultar
+      </button>
+      <button
+        class="button-form-limpiar"
+        mat-raised-button
+        color="accent"
+        (click)="clearFilter()"
+        [disabled]="
+          (rangeForm.get('start').invalid || rangeForm.get('end').invalid) &&
+          rangeForm.get('buscar').invalid
+        "
+      >
+        Limpiar
+      </button>
+    </form>
+  </div>
+</div>
+
+<table mat-table [dataSource]="dataSource" matSort>
+  <ng-container matColumnDef="estado">
+    <th mat-header-cell *matHeaderCellDef mat-sort-header>ESTADO</th>
+    <td mat-cell *matCellDef="let element">{{ element.estado }}</td>
+  </ng-container>
+
+  <!-- Name Column -->
+  <ng-container matColumnDef="hora">
+    <th mat-header-cell *matHeaderCellDef mat-sort-header>HORA</th>
+    <td mat-cell *matCellDef="let element">{{ element.hora }}</td>
+  </ng-container>
+
+  <!-- Name Column -->
+  <ng-container matColumnDef="precio">
+    <th mat-header-cell *matHeaderCellDef mat-sort-header>PRECIO</th>
+    <td mat-cell *matCellDef="let element">{{ element.precio }}</td>
+  </ng-container>
+
+  <!-- Name Column -->
+  <ng-container matColumnDef="comentario">
+    <th mat-header-cell *matHeaderCellDef mat-sort-header>COMENTARIO</th>
+    <td mat-cell *matCellDef="let element">{{ element.comentario }}</td>
+  </ng-container>
+
+  <!-- Name Column -->
+  <ng-container matColumnDef="fecha">
+    <th mat-header-cell *matHeaderCellDef mat-sort-header>FECHA</th>
+    <td mat-cell *matCellDef="let element">
+      {{ element.fecha | date : "dd-MM-YYYY" }}
+    </td>
+  </ng-container>
+
+  <!-- Name Column -->
+  <ng-container matColumnDef="actions">
+    <th mat-header-cell *matHeaderCellDef mat-sort-header class="actionCampo">
+      ACCIONES
+    </th>
+    <td mat-cell *matCellDef="let element">
       <div class="table-button-row">
-        <!--<button mat-flat-button class="button-rosado" (click)="onOpenModal()">Crear proveedor</button>-->
-        <button mat-flat-button class="button-rosado" (click)="createPdf()">Imprimir Reporte</button>
+        <button
+          mat-button
+          mat-raised-button
+          class="button-yellow"
+          (click)="onOpenModalPDFpedido(element)"
+        >
+          Ver PDF pago
+        </button>
+        <button
+          mat-button
+          mat-raised-button
+          class="button-yellow"
+          (click)="onOpenModal(element)"
+        >
+          Detalles
+        </button>
+        <button
+          mat-button
+          mat-raised-button
+          color="warn"
+          (click)="onDelete(element.idpedido)"
+        >
+          Eliminar
+        </button>
       </div>
+    </td>
+  </ng-container>
 
-      <div class="table-range">
-        <form [formGroup]="rangeForm">
-          <mat-form-field appearance="outline" class="search-form-field" >
-            <mat-label>Buscar estado</mat-label>
-            <input matInput formControlName="buscar" color="accent" placeholder="Buscar estado" autocomplete="off" (keyup)="cargarEnTablaSiCampoVacio($event.target.value)" />
-            <mat-error *ngIf="rangeForm.controls.buscar.hasError('matBuscarInvalid')">LLene el campo</mat-error>
-          </mat-form-field>
-          <mat-form-field appearance="outline" class="search-form-range">
-            <mat-label>Fecha de pedido</mat-label>
-            <mat-date-range-input  [rangePicker]="picker">
-              <input matStartDate formControlName="start" placeholder="Fecha inicial">
-              <input matEndDate formControlName="end" placeholder="Fecha final">
-            </mat-date-range-input>
-            <mat-hint>MM/DD/YYYY – MM/DD/YYYY</mat-hint>
-            <mat-datepicker-toggle matSuffix [for]="picker"></mat-datepicker-toggle>
-            <mat-date-range-picker #picker></mat-date-range-picker>
-
-            <mat-error *ngIf="rangeForm.controls.start.hasError('matStartDateInvalid')">Primera fecha inválido</mat-error>
-            <mat-error *ngIf="rangeForm.controls.end.hasError('matEndDateInvalid')">Segunda fecha inválido</mat-error>
-          </mat-form-field>
-
-          <button
-              class="button-form-consultar"
-              mat-raised-button color="accent"
-              (click)="applyDateFilter()"
-              [disabled]="(rangeForm.get('buscar').invalid && (rangeForm.get('start').invalid || rangeForm.get('end').invalid))"  >Consultar</button>
-          <button
-              class="button-form-limpiar"
-              mat-raised-button color="accent"
-              (click)="clearFilter()"
-              [disabled]=" (rangeForm.get('start').invalid || rangeForm.get('end').invalid) && (rangeForm.get('buscar').invalid) ">Limpiar</button>
-        </form>
-
-
-      </div>
-    </div>
-
-    <table mat-table [dataSource]="dataSource" matSort >
-
-
-      <!-- Position Column
-      <ng-container matColumnDef="idpedido">
-        <th mat-header-cell *matHeaderCellDef mat-sort-header> ID </th>
-        <td mat-cell *matCellDef="let element"> {{element.idpedido}} </td>
-      </ng-container>-->
-
-      <ng-container  matColumnDef="estado">
-        <th mat-header-cell *matHeaderCellDef mat-sort-header> ESTADO </th>
-        <td  mat-cell *matCellDef="let element"> {{element.estado}} </td>
-      </ng-container>
-
-      <!-- Name Column -->
-      <ng-container  matColumnDef="hora">
-        <th mat-header-cell *matHeaderCellDef mat-sort-header> HORA </th>
-        <td  mat-cell *matCellDef="let element"> {{element.hora}} </td>
-      </ng-container>
-
-       <!-- Name Column -->
-      <ng-container  matColumnDef="precio">
-        <th mat-header-cell *matHeaderCellDef mat-sort-header> PRECIO </th>
-        <td  mat-cell *matCellDef="let element"> {{element.precio}} </td>
-      </ng-container>
-
-      <!-- Name Column -->
-      <ng-container matColumnDef="comentario">
-        <th mat-header-cell *matHeaderCellDef mat-sort-header> COMENTARIO </th>
-        <td mat-cell *matCellDef="let element"> {{element.comentario}} </td>
-      </ng-container>
-
-      <!-- Weight Column
-      <ng-container matColumnDef="direccion">
-        <th mat-header-cell *matHeaderCellDef mat-sort-header> DIRECCIÓN </th>
-        <td mat-cell *matCellDef="let element" class="center"> {{element.direccion}} </td>
-      </ng-container>-->
-
-
-
-
-
-
-
-      <!-- Name Column
-      <ng-container  matColumnDef="latitud">
-        <th mat-header-cell *matHeaderCellDef mat-sort-header> LATITUD </th>
-        <td  mat-cell *matCellDef="let element"> {{element.latitud}} </td>
-      </ng-container>-->
-
-      <!-- Name Column
-      <ng-container  matColumnDef="longitud">
-        <th mat-header-cell *matHeaderCellDef mat-sort-header> LONGITUD </th>
-        <td  mat-cell *matCellDef="let element"> {{element.longitud}} </td>
-      </ng-container>-->
-
-
-      <!-- Name Column -->
-      <ng-container  matColumnDef="fecha">
-        <th mat-header-cell *matHeaderCellDef mat-sort-header> FECHA </th>
-        <td  mat-cell *matCellDef="let element"> {{element.fecha | date: 'dd-MM-YYYY'}} </td>
-      </ng-container>
-
-
-
-
-
-
-      <!-- Name Column
-      <ng-container  matColumnDef="estado" *ngIf=""> -->
-        <!--<th mat-header-cell *matHeaderCellDef mat-sort-header> ESTADO </th>
-        <td  mat-cell *matCellDef="let element" >
-          <button mat-button mat-raised-button class="color-estado"> {{element.estado}} </button>
-        </td>-->
-
-    <!--  </ng-container>-->
-
-    <!--  <ng-template #estadoEspera>
-        <th mat-header-cell *matHeaderCellDef mat-sort-header> ESTADO </th>
-        <td  mat-cell *matCellDef="let element" >
-          <button mat-button mat-raised-button class="color-estado"> {{element.estado}} </button>
-        </td>
-      </ng-template>
-      <ng-template #estadoAbierto>
-        <th mat-header-cell *matHeaderCellDef mat-sort-header> ESTADO </th>
-        <td  mat-cell *matCellDef="let element" >
-          <button mat-button mat-raised-button class="color-estado"> {{element.estado}} </button>
-        </td>
-      </ng-template>-->
-
-
-
-
-      <!-- Name Column -->
-      <ng-container  matColumnDef="actions">
-        <th mat-header-cell *matHeaderCellDef mat-sort-header class="actionCampo"> ACCIONES  </th>
-        <td  mat-cell *matCellDef="let element">
-          <div class="table-button-row">
-            <!--<button mat-raised-button  class="button-yellow" (click)="onOpenModal(element)">Editar</button>
-            <button mat-flat-button color="warn" (click)="onDelete(element.idusuario)">Eliminar</button>-->
-            <button mat-button mat-raised-button  class="button-yellow" (click)="onOpenModalPDFpedido(element)">Ver PDF pago</button>
-            <button mat-button mat-raised-button  class="button-yellow" (click)="onOpenModal(element)">Detalles</button>
-            <button mat-button mat-raised-button  color="warn" (click)="onDelete(element.idpedido)">Eliminar</button>
-
-
-          </div>
-
-        </td>
-
-
-
-
-
-      </ng-container>
-
-      <tr mat-header-row *matHeaderRowDef="displayedColumns"></tr>
-      <tr mat-row *matRowDef="let row; columns: displayedColumns;"></tr>
-
-    </table>
-    <mat-paginator class="paginator" [pageSizeOptions]="[5,10,25,100]" [pageSize]="5" showFirstLastButtons></mat-paginator>
-
-
-
+  <tr mat-header-row *matHeaderRowDef="displayedColumns"></tr>
+  <tr mat-row *matRowDef="let row; columns: displayedColumns"></tr>
+</table>
+<mat-paginator
+  class="paginator"
+  [pageSizeOptions]="[5, 10, 25, 100]"
+  [pageSize]="5"
+  showFirstLastButtons
+></mat-paginator>
